--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-$light-color: #f4f4f4;
-$blue: #7462E1;
-$black: #000000;
+
+/* Colors */
+
+$primary: #7462E1;
+$primary--dark: #000000;
+$primary--light: #b3aed0;
+$secondary: #FBE3B2;
+$white: #ffffff;
 
 /* Layout */
 
@@ -30,23 +35,23 @@ body {
   transition: 0.5s;
 
   &--primary {
-    background: $blue;
-    color: #fff;
+    background: $primary;
+    color: $white;
 
     &:hover {
-      background-color: #FBE3B2;
-      color: #110945;
+      background-color: $secondary;
+      color: $primary--dark;
       box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     }
   }
 
   &--secondary {
     padding: 10px 30px;
-    border: 3px solid $blue;
-    color: $blue;
+    border: 3px solid $primary;
+    color: $primary;
     &:hover {
-      background-color: #7462E1;
-      color: white;
+      background-color: $primary;
+      color: $white;
       box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     }
   }
@@ -113,13 +118,13 @@ body {
 
     &__tagline {
       font-size: 1.5rem;
-      color: #b3aed0;
+      color: $primary--light;
     }
 
     &__title {
       line-height: 1.2;
       font-size: 3.5rem;
-      color: #110945;
+      color: $primary--dark;
     }
 
     &__text {
@@ -136,36 +141,18 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 15px;
-  color: $blue;
-  border: 2px solid $blue;
+  color: $primary;
+  border: 2px solid $primary;
   cursor: pointer;
   margin-right: 20px;
   text-decoration: none;
   transition-duration: 0.5s;
 
   &:hover {
-    color: white;
-    background-color: $blue;
+    color: $white;
+    background-color: $primary;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
-}
-
-#logo {
-  width: 50px;
-}
-
-#burger-bar {
-  font-size: 20px;
-  cursor: pointer;
-}
-
-#arrow-down {
-  position: absolute;
-  bottom: 20px;
-  left: 10%;
-  font-size: 2.5rem;
-  color:#110945;
-  cursor: pointer;
 }
 
 .ellipse {
@@ -184,6 +171,24 @@ body {
     z-index: -2;
     right: 425px;
   }
+}
+
+#logo {
+  width: 50px;
+}
+
+#burger-bar {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+#arrow-down {
+  position: absolute;
+  bottom: 20px;
+  left: 10%;
+  font-size: 2.5rem;
+  color: $primary--dark;
+  cursor: pointer;
 }
 
 #stock-img {
