--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,12 +1,20 @@
+/* Font */
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 /* Colors */
 
 $primary: #7462E1;
-$primary--dark: #000000;
+$primary--dark: #110945;
 $primary--light: #b3aed0;
 $secondary: #FBE3B2;
 $white: #ffffff;
+
+/* Mixins */
+
+@mixin box-shadow {
+ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 
 /* Layout */
 
@@ -17,7 +25,7 @@ $white: #ffffff;
 }
 
 body {
-  color: $black;
+  color: black;
   line-height: 1.6;
   font-family: 'Lato', sans-serif;
 }
@@ -41,7 +49,7 @@ body {
     &:hover {
       background-color: $secondary;
       color: $primary--dark;
-      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+      @include box-shadow;
     }
   }
 
@@ -52,12 +60,13 @@ body {
     &:hover {
       background-color: $primary;
       color: $white;
-      box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+      @include box-shadow;
     }
   }
 }
 
 .navbar {
+  background-color: $white;
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -86,12 +95,23 @@ body {
   &__content {
     display: none;
     list-style-type: none;
+    border-bottom: 2px solid $primary--light;
 
     &__link {
       padding: 15px 20px;
+      transition-duration: 0.5s;
+
+      &:hover {
+        background-color: $primary;
+
+        & a {
+          color: $white;
+        }
+      }
 
       & a {
-        color: $black;
+        color: $primary--dark;
+        font-weight: bold;
         text-decoration: none;
         display: inline-block;
         width: 100%;
@@ -151,7 +171,7 @@ body {
   &:hover {
     color: $white;
     background-color: $primary;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    @include box-shadow;
   }
 }
 
@@ -160,16 +180,16 @@ body {
  
   &--01 {
     width: 50%;
-    bottom: -150px;
-    right: -155px;
+    bottom: 2%;
+    right: 0;
     z-index: -1;
   }
 
   &--02 {
-    width: 30%;
-    bottom: 100px;
+    width: 40%;
+    bottom: 5%;
     z-index: -2;
-    right: 425px;
+    right: 30%;
   }
 }
 
@@ -192,10 +212,11 @@ body {
 }
 
 #stock-img {
-  width: 50%;
+  width: 40%;
   position: absolute;
-  bottom: -375px;
+  bottom: 0;
   right: 10%;
+  width: 50%;
 }
 
 // Navbar Desktop View 
@@ -216,15 +237,28 @@ body {
         padding: 10px 40px;
 
         & a {
-          color: $black;
+          position: relative;
+          color: $primary--dark;
           text-decoration: none;
+
+          &:before {
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: -5px;
+            left: 0;
+            background: $primary--dark;
+            visibility: hidden;
+            transition: all 0.3s ease-in-out 0s;
+          }
+          &:hover:before {
+            visibility: visible;
+            width: 100%;
+          }
         }
       }
     }
-  }
-
-  #burger-bar {
-    display: none;
   }
 
   .hero__content {
@@ -236,7 +270,7 @@ body {
 
     &__tagline {
       font-size: 1rem;
-      color :#b3aed0;
+      color :$primary--light;
     }
 
     &__title {
@@ -247,6 +281,30 @@ body {
     &__text {
       font-size: 1rem;
     }
+  }
+
+  .ellipse--01 {
+    width: 50%;
+    bottom: -150px;
+    right: -155px;
+    z-index: -1;
+  }
+
+  .ellipse--02 {
+    width: 30%;
+    bottom: 100px;
+    z-index: -2;
+    right: 425px;
+  }
+
+  #stock-img {
+    position: absolute;
+    bottom: -375px;
+    right: 10%;
+  }
+
+  #burger-bar {
+    display: none;
   }
 }
 
